[gd_scene load_steps=10 format=2]

[ext_resource path="res://Entities/PistonHazard/piston_legs.png" type="Texture" id=1]
[ext_resource path="res://Entities/PistonHazard/squeak.ogg" type="AudioStream" id=2]
[ext_resource path="res://Entities/PistonHazard/piston.ogg" type="AudioStream" id=3]
[ext_resource path="res://Entities/PistonHazard/piston.png" type="Texture" id=4]
[ext_resource path="res://Entities/PistonHazard/piston_hazard.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Crush and flutter"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 42 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "reset_playback_speed"
}, {
"args": [  ],
"method": "_spawn_pancake"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("HitAudioPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0.5 )
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 42, 63 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PistonWall/PistonWallArea:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 21 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 19 )

[node name="Piston" type="Node2D"]
script = ExtResource( 5 )

[node name="PistonBody" type="KinematicBody2D" parent="."]
position = Vector2( 0, 1 )

[node name="MainSprite" type="Sprite" parent="PistonBody"]
texture = ExtResource( 4 )
vframes = 8
hframes = 9
frame = 40

[node name="LegsSprite" type="Sprite" parent="PistonBody"]
z_index = 200
z_as_relative = false
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PistonBody"]
"anims/Crush and flutter" = SubResource( 1 )
anims/Run = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PistonBody"]
position = Vector2( 1, -16 )
shape = SubResource( 3 )

[node name="SquashZone" type="Area2D" parent="PistonBody"]

[node name="SquashZoneDetector" type="CollisionShape2D" parent="PistonBody/SquashZone"]
position = Vector2( 0, 20 )
shape = SubResource( 4 )

[node name="PistonWall" type="KinematicBody2D" parent="PistonBody"]

[node name="PistonWallArea" type="CollisionShape2D" parent="PistonBody/PistonWall"]
position = Vector2( 0, 20 )
shape = SubResource( 4 )

[node name="HitAudioPlayer" type="AudioStreamPlayer" parent="PistonBody"]
stream = ExtResource( 2 )
volume_db = -20.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PistonBody"]
stream = ExtResource( 3 )
volume_db = -28.0

[node name="PancakeSpawnPoint" type="Node2D" parent="PistonBody"]
position = Vector2( 0, 37 )
